change permission for course-homework on course-page

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -162,7 +162,7 @@
                 <hr/>
             <div class="row">
                 <div class="col-sm-6 container">
-                    {{#userHasPermission "HOMEWORK_CREATE" }}
+                    {{#userHasPermission "COURSE_EDIT" }}
                     <a href="/homework/new?course={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
                         <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span>
                     </a>
