--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -18,7 +18,7 @@
             <div class="row equal-height">
                 {{#each this}}
                     <div class="col-md-6 col-lg-4">
-                        {{> "content/item" }}
+                        {{> "content/item" redirectBaseUrl=../../redirectBaseUrl }}
                     </div>
                 {{/each}}
             </div>
@@ -29,7 +29,7 @@
             <div class="row equal-height">
                 {{#each this}}
                     <div class="col-md-6 col-lg-4">
-                        {{> "content/item" }}
+                        {{> "content/item" redirectBaseUrl=../../redirectBaseUrl }}
                     </div>
                 {{/each}}
             </div>
