show the actual points

--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,6 +1,6 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
     <div class="homework">
-        <b class="grade">{{{submission.gradeText}}}</b>
+        <b class="grade">{{{submission.grade}}}</b>
 
         <div class="comment">
             {{#if submission.gradeComment}}
