--- a/views/administration/forms/form-systems.hbs
+++ b/views/administration/forms/form-systems.hbs
@@ -7,7 +7,7 @@
 
 <div class="form-group">
     <label>Typ des Systems</label>
-    <select name="type" required data-placeholder="Anbieter auswählen">
+    <select name="type" required data-placeholder="Anbieter auswählen" class="sso-type-selection" >
         {{#each availableSSOTypes}}
             <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
         {{/each}}
@@ -15,11 +15,11 @@
 </div>
 <div class="form-group">
     <label>Url des Systems</label>
-    <input class="form-control" name="url" type="text" value="{{url}}" required />
+    <input class="form-control" name="url" type="text" value="{{url}}" />
 </div>
 <hr>
-<div class="panel-group">
-    <div class="panel panel-default">
+<div class="panel-group collapsePanel">
+    <div class="panel panel-default" id="panel-oauth">
         <div class="panel-heading">
             <a data-toggle="collapse" href="#collapse{{collapseId}}" class="collapse-toggle"><label>Weitere Informationen (OAuth)</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
         </div>
