--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -133,10 +133,10 @@
                                     <p class="card-title-directory">
                                         {{#if logo_url}}
                                             <img src={{this.logo_url}} class="float-left"
-                                                 style="width:100px; height:auto;"/>
+                                                 style="width:auto; height:75px;"/>
                                         {{else}}
                                             <img src="/images/cloud.png" class="float-left"
-                                                 style="width:100px; height:auto;"/>
+                                                 style="width:auto; height:75px;"/>
                                         {{/if}}
                                         <span>{{this.name}}</span>
 
