don't show poll for student and demo

--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -119,12 +119,14 @@
             </div>
         </div>
 
-        {{#ifneq this.currentRole "Demo"}}
+        {{#ifneq this.currentRole "Schüler"}}
+        {{#ifneq ../this.currentRole "Demo"}}
             {{#embed "lib/components/modal" class="poll-modal"}}
             {{#content "body"}}
                 {{> "lib/forms/form-poll"}}
             {{/content}}
         {{/embed}}
+        {{/ifneq}}
         {{/ifneq}}
 
     {{/content}}
