add info for class adding (#394)

--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -33,7 +33,7 @@
 </div>
 
 <div class="form-group">
-    <label>Klasse(n)</label>
+    <label>Klasse(n) <small>(alle Schüler werden automatisch hinzugefügt)</small></label>
 
     <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
         {{#each classes}}
