--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Klasse(n)</label>
+                    <label>Klasse(n) <small>(alle Schüler werden automatisch hinzugefügt)</small></label>
 
                     <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
                         {{#each classes}}
