--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -21,36 +21,36 @@
                             <p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
 
                             <h4>Ansatzpunkte der Schul-Cloud</h4>
-                            <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große administrative und finanzielle Herausforderungen. Während im Alltag digitale Geräte längst allgegenwärtig sind, befinden sich in zahlreichen Schulen häufig ausschließlich veraltete Hard- sowie Software im Computerraum, die nicht zu jeder Zeit von allen zugänglich ist. Jenseits von Fächern wie Mathematik, Informatik, Naturwissenschaft und Technik (MINT) sowie für die Vor- und Nachbereitung des Unterrichts sind digitale Inhalte bisher nur schwer nutzbar.</p>
+                            <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
 
                             <h4>Pilotprojekt zur Modernisierung des Schulunterrichts</h4>
-                            <p>Das Hasso-Plattner-Institut (HPI) entwickelt die Schul-Cloud seit 2016 unter Förderung durch das Bundesministerium für Bildung und Forschung (BMBF) sowie in Kooperation mit dem nationalen Excellence-Schulnetzwerk MINT-EC. Die konzipierte Cloud-Infrastruktur soll Lehrkräften, Schüler/innen und Eltern einen einfachen Zugang zu einem breiten Spektrum an innovativen Lehr- und Lernmaterialien ermöglichen - von überall aus und zu jeder Zeit. </p>
+                            <p>Das Hasso-Plattner-Institut (HPI) entwickelt die Schul-Cloud unter Förderung durch das Bundesministerium für Bildung und Forschung (BMBF) sowie in Kooperation mit dem nationalen Excellence-Schulnetzwerk MINT-EC. </p>
                             <img src="/images/login-right-cropped.png" alt="Schul-Cloud Illustration #1" class="pull-left illustration">
-                            <p>Da digitale Medien für alle Unterrichtsfächer wertvolle Angebote bieten, müssen sie möglichst vielen Lehrkräften sowie Schüler/innen zur Verfügung stehen. Durch die Einführung der zukunftsorientierten Cloud-Infrastruktur sind neue technische Entwicklungen in Schulen leicht abbildbar und Schüler/innen erhalten die Möglichkeit, flächendeckend neueste und professionell gewartete Programme zu nutzen.</p>
+                            
                             <ul>
                                 <li>Mehr Informationen: <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf" title="Initiates file download" target="_blank">Kurzbeschreibung "Die Schul-Cloud" (.pdf)</a></li>
                             </ul>
                             
                             <h4>Die Grundidee der Schul-Cloud</h4>
-                            <p>Wie in Unternehmen und im privaten Bereich bereits bewiesen helfen webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing, einfach und effizient auf IT-Dienste zuzugreifen. Bildungsinhalte brauchen nicht länger ausschließlich in abgeschlossenen Silos, Lehrbüchern oder auf individuellen Rechnern platziert werden. Stattdessen werden sie webbasiert für einen großen Kreis an Nutzer/innen von überall aus zur Verfügung gestellt.</p>
-                            <p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Expert/innen kümmern sich um die Administration, Wartung sowie regelmäßige Aktualisierung der Software, die über die Cloud bezogen wird. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzer/innen entfällt.</p>
-                            <p>Sämtliche Programme und das Benutzerprofil liegen in einem Rechenzentrum bereit und werden bei Bedarf via Internet zur Verfügung gestellt. Für die Schulen bedeutet dies, dass sie nicht länger eigene Netzwerke installieren, konfigurieren und administrieren müssen. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
-                            <p>Die Bereitstellung fer Schul-Cloud ist ein wichtiges Infrastrukturprojekt im Bereich der allgemeinbildenden Schulen und ein entscheidender Schritt, um die Nutzung digitaler Medien und Inhalte flächendeckend im Schulalltag voranzubringen.</p>
+                            <p>Webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing ermöglichen einen effizienten Zugriff auf zeitgemäße IT-Dienste für einen großen Kreis an Nutzer/innen.</p>
+                            <p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzer/innen entfällt.</p>
+                            <p>Sämtliche Programme und das Benutzerprofil werden via Internet zur Verfügung gestellt. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
+                            <p>Die Bereitstellung der Schul-Cloud ist ein entscheidender Schritt, um die Nutzung digitaler Medien in der Schule flächendeckend voranzubringen.</p>
                             <ul>
                                 <li>Mehr Informationen: <a href="https://publishup.uni-potsdam.de/opus4-ubp/files/10385/tbhpi116.pdf" title="Initiates file download" target="_blank">Technischer Bericht "Die Schul-Cloud" (.pdf)</a></li>
                             </ul>
                             
                             <h4>Vorteile der Schul-Cloud</h4>
                             <ul>
-                                <li>Zugang zu einem großen Angebot an neuesten digitalen Lehr- und Lerninhalten - jederzeit und überall</li>
-                                <li>Digitale Bildung beschränkt sich nicht länger auf separate Computerräume</li>
-                                <li>Die aufwendige Wartung von Hard- und Software durch die Lehrkräfte entfällt</li>
-                                <li>Ständige Verfügbarkeit neuester Hard- und Software sowohl für Lehrer/innen als auch für Schüler/innen</li>
-                                <li>Verfügbare IT-Anwendungen entsprechen den aktuellsten Sicherheitsstandards</li>
-                                <li>Entstehung neuer digitaler Lehr- und Lernangebote</li>
+                                <li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
+                                <li>Digitale Bildung jenseits separater Computerräume</li>
+                                <li>Professionelle Wartung</li>
+                                <li>Ständige Verfügbarkeit neuester Software für Lehrer/innen und Schüler/innen</li>
+                                <li>IT-Anwendungen entsprechen aktuellsten Sicherheitsstandards</li>
+                                <li>Anlaufstelle für neue digitale Lernangebote</li>
                                 <li>Direktes Feedback durch die Nutzer/innen</li>
                                 <li>Anregung zu selbstbestimmtem Lernen</li>
-                                <li>Bereitstellung eigens entworfener Lernangebote, z.B. zur Nachhilfe</li><li>Erweiterung der Unterrichtsmethoden</li><li>Vernetzung unterschiedlicher Lernorte</li>
+                                <li>Bereitstellung eigens entworfener Lernangebote</li><li>Erweiterung der Unterrichtsmethoden</li><li>Vernetzung unterschiedlicher Lernorte</li>
                             </ul>
                         <div>
                     </section>
