make it possible to upload file in submission tab

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -14,23 +14,7 @@
 
         <div class="route-files">
             {{#if canUploadFile}}
-                <section class="section-upload" data-path="{{path}}">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <form class="form-upload dz-clickable" {{#userHasPermission "FILE_CREATE"}}action="/files/upload/"{{/userHasPermission}}>
-                                <div class="dz-default dz-message" data-dz-message="">
-                                    <span><i class="fa fa-cloud-upload dz-clickable"></i> Dateien zum Hochladen ablegen.</span>
-                                </div>
-                            </form>
-                            <div class="progress-bar">
-                                <div class="progress">
-                                    <span class="percent"></span>
-                                    <div class="bar" style="width:0%">&nbsp;</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                {{#embed "files/file-upload"}}{{/embed}}
             {{/if}}
 
             <section class="section-title">
