--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -1,6 +1,7 @@
 ﻿{{#content "scripts" mode="append"}}
     <script src="/vendor/ckeditor/ckeditor.js" defer></script>
     <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
+    <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
     <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
             $(document).ready(function () {
@@ -55,6 +56,7 @@
     <link rel="stylesheet" href="/styles/homework/submissions.css"/>
     <link rel="stylesheet" href="/styles/homework/discussions.css"/>
     <link rel="stylesheet" href="/styles/homework/tabs.css"/>
+    <link rel="stylesheet" href="/styles/files/upload.css"/>
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     <style>.section-title h4::before{content:"● {{#if private}}🔒 {{/if}}";color:{{this.color}};</style>
 {{/content}}
