--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -3,8 +3,18 @@
     <div class="comment editor">
         {{#embed "files/file-upload" }}{{/embed}}
         {{#if submission}}
+        <input name="submissionId" type="hidden" data-force-value="true" value="{{submission._id}}"/>
         <form class="form" method="post" action="/homework/submit/{{submission._id}}">
             <input type="hidden" name="_method" data-force-value="true" value="patch"/>
+            <div class="form-group section-uploaded-files">
+                <label>Zur Abgabe hochgeladene Dateien</label>
+                <ul class="list-group col-md-6 col-xs-12">
+                    {{#each submission.fileIds}}
+                        <li class="list-group-item"><i class="fa fa-file" aria-hidden="true"></i> {{this.name}} <span class="fa-active"><i class="fa fa-trash fa-active" aria-hidden="true"></i> <i class="fa fa-cloud-download fa-active" aria-hidden="true"></i></span></li>
+                    {{/each}}
+                </ul>
+            </div>
+            <hr>
             <div class="form-group">
                 <textarea id="evaluation" name="comment" class="form-control customckeditor"
                           placeholder="Erstelle deine Abgabe...">{{submission.comment}}</textarea>
