--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -10,7 +10,24 @@
                 <label>Zur Abgabe hochgeladene Dateien</label>
                 <ul class="list-group col-md-6 col-xs-12">
                     {{#each submission.fileIds}}
-                        <li class="list-group-item"><i class="fa fa-file" aria-hidden="true"></i> {{this.name}} <span class="fa-active"><i class="fa fa-trash fa-active" aria-hidden="true"></i> <i class="fa fa-cloud-download fa-active" aria-hidden="true"></i></span></li>
+                        <li class="list-group-item">
+                            <i class="fa fa-file" aria-hidden="true"></i> {{this.name}}
+                            <span class="fa-active">
+                                 <a href="/files/file?download=1&file={{this.key}}"
+                                    target="_blank"
+                                    data-method="download">
+                                    <i class="fa fa-cloud-download"></i>
+                                </a>
+                                <a href="/files/file/"
+                                   target="_blank"
+                                   data-method="delete-file"
+                                   data-file-name="{{this.name}}"
+                                   data-file-path="{{this.path}}"
+                                   data-file-id="{{this._id}}">
+                                    <i class="fa fa-trash-o"></i>
+                                </a>
+                            </span>
+                        </li>
                     {{/each}}
                 </ul>
             </div>
@@ -46,4 +63,19 @@
     {{/if}}
     </form>
     </div>
+
+    {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+        {{#content "body"}}
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-close">
+                    Abbrechen
+                </button>
+
+                <button type="submit" class="btn btn-primary btn-submit">
+                    Löschen
+                </button>
+            </div>
+        {{/content}}
+    {{/embed}}
 </section>
