--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -15,7 +15,7 @@
 				<td>{{this.student.firstName}}</td>
 				<td>{{this.student.lastName}}</td>
 				<td>
-					{{#if this.submission.comment}}
+					{{#if this.submission}}
 						<i class="fa fa-check green" aria-hidden="true"/>
 					{{else}}
 						<i class="fa fa-times red" aria-hidden="true"/>
