--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -14,7 +14,7 @@
             </div>
 
             {{#with featuredContent}}
-            <h3>Interessante Inhalte</h3>
+            <h3>Aktuelle Inhalte</h3>
             <div class="row equal-height">
                 {{#each this}}
                     <div class="col-md-6 col-lg-4">
