move handlebars-helper in helper-file and add warning box

--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -4,11 +4,11 @@
     <div class="card-block">
 
         {{#userIsAllowedToViewContent nonOer}}
-            <a href="/content/redirect/{{{ _id }}}" target="_blank">
-                <h4 class="card-title">{{{ title }}}</h4>
+            <a href="/content/redirect/{{{ ../_id }}}" target="_blank">
+                <h4 class="card-title">{{{ ../title }}}</h4>
             </a>
         {{else}}
-            <h4 class="card-title">{{{ title }}}</h4>
+            <h4 class="card-title">{{{ ../title }}}</h4>
         {{/userIsAllowedToViewContent}}
 
         <div class="card-tags">
@@ -17,6 +17,13 @@
             {{/each}}
         </div>
         <p class="card-text">{{{ description }}}</p>
+        {{#userIsAllowedToViewContent nonOer}}
+        {{else}}
+            <div class="alert alert-info" role="alert">
+                Inhalt aus Lizenzgründen im Demomodus nicht verfügbar.
+            </div>
+        {{/userIsAllowedToViewContent}}
+
     </div>
     <div class="card-footer text-muted w-100">
         <span>via {{{ providerName }}}</span>
