--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -4,9 +4,10 @@
             <div class="partner-box-wrapper col-md-12">
                 <p>
                     Sie möchten die Schul-Cloud unterstützen? Das freut uns. Wenn Sie interessante Lern- und Lehrinhalte
-                    haben wenden Sie sich bitte an <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.
-                    Sonstige Anfragen und Angebote gerne unter <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
-                    Wer beim Entwickeln und Programmieren mithelfen möchte findet unter
+                    haben, wenden Sie sich bitte an <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.
+                    Sonstige Anfragen und Angebote können gerne unter <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>
+                    eingebracht werden.
+                    Wer beim Entwickeln und Programmieren mithelfen möchte, findet unter
                     <a href="https://schul-cloud.github.io" target="_blank">https://schul-cloud.github.io</a>  mehr Informationen.
                 </p>
             </div>
@@ -66,7 +67,7 @@
         <div class="row">
             <div class="intro-box col-sm-12">
                 <p>
-                    Das Schul-Cloud Projekt wird von einem Fachbeirat unterstüzt, der sich aus verschiedenen
+                    Das Schul-Cloud Projekt wird von einem Fachbeirat unterstützt, der sich aus verschiedenen
                     Vertreter/innen der Bildungspraxis, Wirtschaft und Politik zusammensetzt. Im Fokus stehen neben
                     technischen Aspekten, auch Themen wie Datenschutz und Pädagogik. Die Ergebnisse der letzten
                     Fachbeirats-Sitzung können Sie in unserem
