--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <h5>Sponsoren</h5>
+    <h5>Unterstützer</h5>
     <div class="container">
         <div class="row">
             {{#each partners.sponsors}}
