--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -102,15 +102,15 @@ body {
     footer{
         background-color: #555;
         color: #fff;
-        padding:2rem;
+        padding:2rem 2rem 0;
         a{
             color: #fff;
             &:hover{
                 color:#fff!important;
             }
         }
-        .col-md-4:not(:last-of-type){
-            margin-bottom: 1rem;
+        .col-md-4{
+            margin-bottom: 2rem;
         }
     }
 }
