Startseiten-Design bei Registrierung

--- a/views/registration/confirmation.hbs
+++ b/views/registration/confirmation.hbs
@@ -1,5 +1,6 @@
 {{#extend "lib/default"}}
     {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/authentication/login.css"/>
     {{/content}}
 
@@ -14,22 +15,26 @@
     {{/content}}
 
     {{#content "body"}}
-        <div class="container">
+        {{#embed "lib/header"}}{{/embed}}
+        <main class="container">
             <div class="row">
-                <div class="col-xs-12">
-                    {{> "lib/components/notification"}}
-                </div>
-                <div class="col-md-6 offset-md-3">
-                    <hgroup>
-                        <h3>{{title}}</h3>
-                        <h4>{{subtitle}} <a href="{{origin}}">hier</a></h4>
-                    </hgroup>
+                <div class="col-md-8 offset-md-2">
+                    <section class="card">
+                        <div class="card-block">
+                            <div class="col-xs-12">
+                                {{> "lib/components/notification"}}
+                            </div>
+                            <div class="col-md-6 offset-md-3">
+                                <hgroup>
+                                    <h3>{{title}}</h3>
+                                    <h4>{{subtitle}} <a href="{{origin}}">hier</a></h4>
+                                </hgroup>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="bg-graphic bg-graphic-left"></div>
-        <div class="bg-graphic bg-graphic-right"></div>
-
+        </main>
+        {{#embed "lib/extended_footer"}}{{/embed}}
     {{/content}}
 {{/extend}}
