743-anpassungen-content-service-anforderungen-chm-content-provider (#405)
* rename featured- and trending content

* non oer content can only be opened with permission "CONTENT_NON_OER_VIEW"

* rename heading

* move handlebars-helper in helper-file and add warning box

--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -2,15 +2,28 @@
 
     <img class="card-img-top" src="{{{ thumbnail }}}" alt="Thumbnail">
     <div class="card-block">
-        <a href="/content/redirect/{{{ _id }}}" target="_blank">
-            <h4 class="card-title">{{{ title }}}</h4>
-        </a>
+
+        {{#userIsAllowedToViewContent nonOer}}
+            <a href="/content/redirect/{{{ ../_id }}}" target="_blank">
+                <h4 class="card-title">{{{ ../title }}}</h4>
+            </a>
+        {{else}}
+            <h4 class="card-title">{{{ ../title }}}</h4>
+        {{/userIsAllowedToViewContent}}
+
         <div class="card-tags">
             {{#each tags}}
                 <span class="tag tag-default">{{{ this }}}</span>
             {{/each}}
         </div>
         <p class="card-text">{{{ description }}}</p>
+        {{#userIsAllowedToViewContent nonOer}}
+        {{else}}
+            <div class="alert alert-info" role="alert">
+                Inhalt aus Lizenzgründen im Demomodus nicht verfügbar.
+            </div>
+        {{/userIsAllowedToViewContent}}
+
     </div>
     <div class="card-footer text-muted w-100">
         <span>via {{{ providerName }}}</span>
