--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -14,7 +14,7 @@
             </div>
 
             {{#with featuredContent}}
-            <h3>Featured Content</h3>
+            <h3>Aktuelle Inhalte</h3>
             <div class="row equal-height">
                 {{#each this}}
                     <div class="col-md-6 col-lg-4">
@@ -25,7 +25,7 @@
             {{/with}}
 
             {{#with trendingContent}}
-            <h3>Trending Content</h3>
+            <h3>Beliebte Inhalte</h3>
             <div class="row equal-height">
                 {{#each this}}
                     <div class="col-md-6 col-lg-4">
