--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -1,51 +1,15 @@
 {{#if loggedin}}
-
-{{#extend "lib/loggedin"}}
-	{{#content "styles" mode="append"}}
-		<link rel="stylesheet" href="/styles/lib/error.css"/>
-	{{/content}}
-
-	{{#content "page"}}
-		<div class="error-page">
-			<section class="details">
-				<div class="error-code">
-					{{error.status}}
-				</div>
-				<div class="error-title">
-					{{message}}
-				</div>
-				{{#if error.stack}}
-					<div class="card error-card">
-						<div class="card-header">
-							Fehler-Details
-						</div>
-						<div class="card-block error-description">
-							{{error.stack}}
-						</div>
-					</div>
-				{{/if}}
-			</section>
-
-			<div class="bg-graphic bg-graphic-right"/>
-		</div>
-	{{/content}}
-{{/extend}}
-{{else}}
-
-    {{#extend "lib/default"}}
+    {{#extend "lib/loggedin"}}
         {{#content "styles" mode="append"}}
             <link rel="stylesheet" href="/styles/lib/error.css"/>
         {{/content}}
 
-        {{#content "body"}}
-            {{#embed "lib/header"}}{{/embed}}
+        {{#content "page"}}
             <div class="error-page">
                 <section class="details">
                     <div class="error-code">
-                        {{error.status}}
-                    </div>
-                    <div class="error-title">
-                        {{message}}
+                        <h3 class="title">{{error.status}}</h3>
+                        <h4 class="message">{{message}}</h4>
                     </div>
                     {{#if error.stack}}
                         <div class="card error-card">
@@ -59,8 +23,44 @@
                     {{/if}}
                 </section>
 
-                <div class="bg-graphic bg-graphic-right"/>
+                
             </div>
+        {{/content}}
+    {{/extend}}
+{{else}}
+    {{#extend "lib/default"}}
+        {{#content "styles" mode="append"}}
+            <link rel="stylesheet" href="/styles/lib/error.css"/>
+            <link rel="stylesheet" href="/styles/authentication/home.css"/>
+        {{/content}}
+
+        {{#content "body"}}
+            {{#embed "lib/header"}}{{/embed}}
+            <main class="container">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="error-page card">
+                            <section class="details card-block">
+                                <div class="text-center">
+                                    <h3>{{error.status}}</h3>
+                                    <h4>{{message}}</h4>
+                                </div>
+                                {{#if error.stack}}
+                                    <div class="card error-card">
+                                        <div class="card-header">
+                                            Fehler-Details
+                                        </div>
+                                        <div class="card-block error-description">
+                                            {{error.stack}}
+                                        </div>
+                                    </div>
+                                {{/if}}
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            {{#embed "lib/extended_footer"}}{{/embed}}
         {{/content}}
     {{/extend}}
 {{/if}}
